tests/PhiTest/compile_failure/src/CheckNoexcept.fail.cpp
#include <Phi/Test/TestMacros.hpp>

void f();

TEST_CASE("CHECK_NOEXCEPT")
{
    CHECK_NOEXCEPT(f());
}
